<resources>
    <string name="app_name"> Colorfull Calculator </string>

    <string name="del">DEL</string>
    <string name="clear">C</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="posneg">±</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>

    <dimen name="button_height">75dp</dimen>
    <dimen name="textSize">25sp</dimen>
    <dimen name="buttonMargin">0.5dp</dimen>
    <dimen name="layout_height">70dp</dimen>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


</resources>
